# chatterbox-tts-api

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  compose.yaml  config.py  main.py  pyproject.toml  requirements.txt  server.py  tts.py  utils.py
.github/workflows/: python-app.yml
docs/: usage-sillytavern.md
public/: index.html
